[package]
name = "jean-albert"
version = "0.1.0"
edition = "2024"

[dependencies]
tray-icon = "0.7"
rdev = "0.5"
arboard = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
enigo = "0.1"
anyhow = "1.0.98"
